--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,3 +30,6 @@ main{
 ._text_14-20{
     @apply text-[14px] md:text-[20px] leading-[20px] md:leading-[32px] font-bold
 }
+._text_20-32{
+    @apply text-[20px] md:text-[26px] lg:text-[32px] leading-[24px] md:leading-[32px] lg:leading-[40px] font-bold
+}
