--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ main{
     @apply w-full pt-[24px] px-[24px]
 }
 ._wrapper {
-    @apply p-[16px] lg:p-[24px] max-w-[1440px] mx-auto bg-white bg-opacity-[6%] rounded-[8px] md:rounded-[40px] border-[0.5px] border-[#5F9Ad7]
+    @apply p-[16px] lg:p-[24px] max-w-[1440px] mx-auto bg-white bg-opacity-[6%] rounded-[8px] md:rounded-[40px] border-[0.5px] border-[#5F9Ad7] 
 }
 
 ._h2_wrapper{
@@ -25,7 +25,7 @@ main{
     @apply opacity-50
 }
 ._text_14-16{
-    @apply text-[14px] md:text-[16px] leading-[20px] md:leading-[24px] font-medium
+    @apply text-[14px] xs:text-[16px] leading-[20px] md:leading-[24px] font-medium
 }
 ._text_14-20{
     @apply text-[14px] xs:text-[18px] md:text-[20px] leading-[20px] md:leading-[32px] font-bold
